# firestore4kivy

./: README.md  setup.cfg
src/firestore4kivy/: __init__.py  firestore4kivy.py
