[metadata]
name = firestore4kivy
version = 0.0.1
author = Robert Flatt
description = A basic REST Firestore api.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Android-for-Python/firestore4kivy
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.packages.find]
where = src
